# infrastructure/repository/service_type_repository.go
@@ -17,9 +17,9 @@ func NewServiceTypeRepository(db *sql.DB) *ServiceTypeRepository {
 }
 
 func (r *ServiceTypeRepository) Create(serviceType *models.ServiceType) error {
-	_, err := r.db.Exec("INSERT INTO service_types (name, description, base_price, price_per_weight, price_per_piece, created_at) VALUES ($1, $2, $3, $4, $5, $6)RETURNING id",
+	err := r.db.QueryRow("INSERT INTO service_types (name, description, base_price, price_per_weight, price_per_piece, created_at) VALUES ($1, $2, $3, $4, $5, $6) RETURNING id",
 		serviceType.Name, serviceType.Description, serviceType.BasePrice, serviceType.PricePerWeight, serviceType.PricePerPiece, serviceType.CreatedAt,
-	)
+	).Scan(&serviceType.ID)
 	return err
 }
 
